--- a/src/demo.css
+++ b/src/demo.css
@@ -1,10 +1,10 @@
 * {
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-body {
-  margin: 0;
+.container {
+  padding: 0 2rem;
 }
 
 nav {
@@ -14,20 +14,31 @@ nav {
   box-shadow: 0px 2.5px 5px rgba(0, 0, 0, 0.1);
 }
 
-.nav--logo {
-  max-width: 100px;
-}
-
-.hero{
+.hero {
   display: flex;
   flex-direction: column;
 }
-.hero-photo:{}
-.hero--header{
+.hero--header {
   margin-bottom: 16px;
 }
-.hero--text{
-  margin-top:0;
+.input {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #333;
+  border: 2px solid #222;
+  border-radius: 4px;
+  padding: 8px 12px;
+}
+.hero--input {
+  margin-top: 15px;
+}
+.input:focus,
+.input:hover,
+.input:active {
+  border: 3px solid #8d94cb;
+}
+.hero--textarea {
+  margin-top: 8px;
 }
 main {
   padding: 57px 27px;
